GitHub Actionsの設定ファイルの書き方が間違っていた。

--- a/articles/219e14ebcf31a1d13ff4.md
+++ b/articles/219e14ebcf31a1d13ff4.md
@@ -35,7 +35,7 @@ name: "RuboCop Challenge"
 
 on:
   schedule:
-    cron: '30 23 * * 1,2,3' # この設定の場合、火水木のAM8:30に自動でPRが作られます。
+    - cron: '30 23 * * 2,3,4' # この設定の場合、火水木のAM8:30に自動でPRが作られます。
 
 jobs:
   create-pr:
