追記したことを明記しておく。

--- a/articles/219e14ebcf31a1d13ff4.md
+++ b/articles/219e14ebcf31a1d13ff4.md
@@ -6,6 +6,8 @@ topics: ['Rails', 'RuboCop', 'RuboCopChallenger']
 published: true
 ---
 
+* （2021年1月5日 追記）[GitHub Actions の設定ファイルの記載が間違っていたので修正しました。](https://github.com/yamat47/zenn-contents/commit/53495206cace293db3f5c2942173f27e8f5fed00)
+
 RuboCop Challenger って知っていますか？
 ----
 
